<resources>
    <string name="app_name">OLX-NITT</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="olx_nitt">OLX-NITT</string>
    <string name="Nitt_pride_Of_India">NITT- The pride of India</string>
    <string name="nitt_leading_marketplace">NITT\'s leading \nmarketplace</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="terms">If you are accepting\nOLX-NITT terms and condition and privacy policy</string>

    <string name="facebook_app_id">2369580070014902</string>
    <string name="fb_login_protocol_scheme">fb2369580070014902</string>
    <string name="find_items">Find Books, Cycles and many more .......</string>
    <string name="browse_categories">Browse Categories</string>
    <string name="title_sell">Sell</string>
    <string name="offering">What are you offering ?</string>
    <string name="brand">Brand *</string>
    <string name="year">Year *</string>
    <string name="kmDriven">"KM driven "</string>
    <string name="adTitle">Ad Title *</string>
    <string name="mention">Mention the key feature of your item( e.g  brand, model, age, type)</string>
    <string name="describe">Describe what you are selling *</string>
    <string name="include_features">Include condition, features and reason for selling</string>
    <string name="price">Price *</string>
    <string name="address">Address *</string>
    <string name="phone">Phone Number *</string>
    <string name="requiredFields">* Required Fields</string>
    <string name="next">NEXT</string>
    <string name="title_include_details">Include Details</string>
    <string name="enter_brand_name">Enter Brand Name</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="upload_five">Upload upto 5 photos.</string>
    <string name="preview">Preview</string>
    <string name="upload">Upload</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="select_source">Select Source</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="Close">close</string>
    <string name="title_my_Ads">My Ads</string>
    <string name="details">Details</string>
    <string name="address_simple">Address</string>
    <string name="description">Description</string>
    <string name="phone_simple">Phone</string>
    <string name="year_simple">Year</string>
    <string name="call">Call</string>
    <string name="title_details">Details</string>
    <string name="title_browse">Browse Categories</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="sure_logout">\"Are you sure you want to logout? \"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_profile">Profile</string>
    <string name="full_name">Full name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number_simple">Phone Number</string>
    <string name="postal_address">Postal Address</string>
    <string name="save">Save</string>
    <string name="enter_name">Enter Full Name</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_postal_address">Enter Postal Address</string>
    <string name="saved_success">Saved Successfully</string>
    <string name="title_settings">Settings</string>
</resources>