<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?actionBarSize"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/Black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_6"
            android:layout_marginStart="@dimen/dp_6"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <!--this linear Layout has all the edit text-->

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:hint="@string/brand"
                    android:inputType="text"
                    android:id="@+id/edBrand"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:hint="@string/year"
                    android:inputType="number"
                    android:id="@+id/edYear"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/llKmDriven"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:hint="@string/kmDriven"
                    android:inputType="number"
                    android:id="@+id/edKmDriven"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:padding="@dimen/dp_8"
                android:text="@string/adTitle"
                android:textColor="@color/Black"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_8"
                android:text="@string/mention"
                android:textColor="@color/Black"
                />
            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:inputType="text"
                android:layout_height="wrap_content"
                 android:id="@+id/edAdTitle"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_8"
                android:text="@string/describe"
                android:textColor="@color/Black"
                />
            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:id="@+id/edDescription"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dp_8"
                android:paddingEnd="@dimen/dp_8"
                android:text="@string/include_features"
                android:textColor="@color/Black"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:hint="@string/price"
                    android:inputType="numberDecimal"
                    android:id="@+id/edPrice"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:hint="@string/address"
                    android:inputType="textPostalAddress"
                    android:id="@+id/edAddress"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:id="@+id/edPhone"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:paddingEnd="@dimen/dp_8"
                android:paddingStart="@dimen/dp_8"
                android:text="@string/requiredFields"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="bottom">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:background="@color/Black"
                android:textColor="@color/cardview_light_background"
                android:gravity="center"
                android:textStyle="bold"
                android:id="@+id/textViewNext"
                android:padding="@dimen/dp_12"
                android:text="@string/next"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

    </ScrollView>
</LinearLayout>