<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_marginBottom="?actionBarSize"
    android:layout_height="match_parent">

    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/dp_4"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginStart="@dimen/dp_4"
            android:layout_marginEnd="@dimen/dp_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:hint="@string/full_name"
                    android:inputType="text"
                    android:id="@+id/edName"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:id="@+id/edEmailAddress"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:hint="@string/phone_number_simple"
                    android:inputType="phone"
                    android:id="@+id/edPhone"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:hint="@string/postal_address"
                    android:inputType="textPostalAddress"
                    android:id="@+id/edPostalAddress"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSave"
                    android:textColor="@android:color/white"
                    android:background="@color/Black"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:padding="@dimen/dp_12"
                    android:text="@string/save"
                    android:layout_gravity="bottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                </androidx.appcompat.widget.AppCompatTextView>

            </LinearLayout>

        </LinearLayout>



    </ScrollView>

</LinearLayout>