<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.65"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/olx_nitt"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_48"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/sp_180"
            android:textStyle="bold"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginTop="24dp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nitt_leading_marketplace"
            android:textColor="@android:color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center|top"
        android:layout_weight="0.35"
        android:background="@color/Black">
        <LinearLayout
            android:layout_width="@dimen/dp_280"
            android:layout_height="wrap_content"
            android:id="@+id/llgoogle"
            android:orientation="horizontal"
            android:background="@color/cardview_light_background"
            android:layout_marginTop="24dp"
            >
            <ImageView
                android:layout_width="@dimen/dp_48"
                android:padding="2dp"
                android:layout_height="@dimen/dp_48"
                android:src="@drawable/google_icon"
                >
            </ImageView>
            <Button
                android:id="@+id/btn_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/continue_with_google"
                android:background="@color/cardview_light_background"
                >
            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="@dimen/dp_280"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/llfb"
            android:background="@color/cardview_light_background"
            android:layout_marginTop="24dp"
            >
            <ImageView
                android:layout_width="@dimen/dp_48"
                android:padding="2dp"
                android:layout_height="@dimen/dp_48"
                android:src="@drawable/facebook_icon"
                >
            </ImageView>
            <Button
                android:id="@+id/btn_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/continue_with_facebook"
                android:background="@color/cardview_light_background"
                >
            </Button>
        </LinearLayout>

<!--        <androidx.appcompat.widget.AppCompatTextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/terms"-->
<!--            android:textAlignment="center"-->
<!--            android:textColor="@color/cardview_light_background">-->
<!--        </androidx.appcompat.widget.AppCompatTextView>-->
        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp" />
    </LinearLayout>
<!--    <androidx.appcompat.widget.AppCompatTextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textColor="@color/cardview_light_background"-->
<!--        >-->
<!--    </androidx.appcompat.widget.AppCompatTextView>-->
</LinearLayout>