<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent">
        
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/dp_8"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardCornerRadius="@dimen/dp_4"
                android:elevation="@dimen/dp_8"
                app:cardUseCompatPadding="true"
                android:layout_height="@dimen/dp_320">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_margin="@dimen/dp_16"
                    android:background="@drawable/box_dashed_line"
                    android:id="@+id/linearLayoutChoosePhoto"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="@dimen/dp_48"
                        android:layout_height="@dimen/dp_48"
                        android:id="@+id/imageViewChoosePhoto"
                        android:src="@drawable/choose_photo"
                        android:tint="@color/Black"
                        />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/choose_photo"
                        android:textColor="@color/Black"
                        android:textSize="@dimen/dp_16"

                        />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">


                    </androidx.recyclerview.widget.RecyclerView>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_marginTop="@dimen/dp_34"
                android:layout_marginEnd="@dimen/dp_8"
                android:background="@drawable/box_black_bg_white"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_height="@dimen/dp_120">

                 <androidx.appcompat.widget.AppCompatTextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:text="@string/upload_five"
                     android:textAllCaps="true"
                     android:gravity="center"
                     android:background="@android:color/white"
                     />

            </LinearLayout>

        </LinearLayout>

         <RelativeLayout
             android:layout_marginStart="@dimen/dp_16"
             android:layout_marginEnd="@dimen/dp_8"
             android:layout_marginTop="@dimen/dp_18"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">

             <androidx.appcompat.widget.AppCompatButton
                android:layout_width="@dimen/dp_160"
                android:layout_height="wrap_content"
                 android:id="@+id/buttonPreview"
                 android:text="@string/preview"
                 android:textAllCaps="false"
                 android:textColor="@color/Black"
                 android:background="@drawable/box_black_bg_white"/>
             <androidx.appcompat.widget.AppCompatButton
                android:layout_width="@dimen/dp_160"
                android:layout_height="wrap_content"
                 android:id="@+id/buttonUpload"
                 android:text="@string/upload"
                 android:layout_alignParentEnd="true"
                 android:textAllCaps="false"
                 android:textColor="@android:color/white"
                 android:background="@color/Black"/>

         </RelativeLayout>

     </LinearLayout>

    </ScrollView>
</LinearLayout>